kustomize-bluegreen/blue/blue-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: blue-deploy
  name: blue-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: blue-deploy
  type: NodePort
status:
  loadBalancer: {}
