kustomize-bluegreen/blue/myapp-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: myapp
spec:
  rules:
  - host: myapp.local
    http:
      paths:
      - backend:
          service:
            name: blue-svc
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer: {}
